--- a/index.qmd
+++ b/index.qmd
@@ -1,11 +1,20 @@
 ---
-title: "kevinv47"
+title: "Kevin Valdivia"
+image: media/headshot.jpg
+toc: false 
+about: 
+  template: trestles
+  links:
+    - text: LinkedIn
+      icon: linkedin
+      url: https://www.linkedin.com/in/
+    - text: GitHub
+      icon: github
+      url: https://github.com/
 ---
 
-This is a Quarto website.
+## Bio
 
-To learn more about Quarto websites visit <https://quarto.org/docs/websites>.
+I'm Kevin, an International Relations major at Pomona College, graduating in May 2026, with a focus on Latin America. Before college, I never imagined myself getting into data science or programming, but after taking a Political Statistics class in R, I discovered my passion for it. Now, I love working with R and am excited to continue developing my skills in Python. I am now interested in pursuing a career in data science.
 
-```{r}
-1 + 1
-```
+On this site I keep a list of some of my projects.
