--- a/projects/the office/office_text_analysis.qmd
+++ b/projects/the office/office_text_analysis.qmd
@@ -78,19 +78,30 @@ corporate |>
   slice_head(n = 5)
 ```
 
+## Creating a plot of most "on task" Office Characters
+
+### Data manipulation
+The goal of this R chunk is to create a dataset called ontask which
 ```{r}
 main_characters <- c("Michael", "Jim", "Pam", "Dwight", "Ryan", "Angela", 
                 "Andy", "Stanley", "Phyllis", "Kelly", "Toby", 
                 "Kevin", "Oscar", "Creed", "Meredith")
 
+ontask_regular_expression <- "(?i)(Sales call|Close the deal|Client meeting|Team building|Sales quota|Dunder Mifflin|Paper company|File|Report|Workplace safety|Expense report|Business trip|Client relations|Company policy|Human resources|Submit a proposal|Meet the deadline|Job performance|Close a sale|Office supplies|Sales pitch|Productivity report|Employee evaluation|Quarterly review|Manager meeting|Sales team|Sales numbers|Work email|Conference call|Work-life balance|Overtime|Office hours|Weekly meeting|Promotion|Sales report|Job interview|Submit the paperwork|Company-wide memo|Business strategy|Client presentation|Office party|Budget meeting|New hire|Work project|Revenue target|Annual review|Management decision|Employee training|Company retreat|Work performance)"
+
+
 ontask <- office |> 
   filter(Character %in% main_characters) |> 
   mutate(on_task = case_when(
-    str_detect(Line, "(?i)(Sales call|Close the deal|Client meeting|Team building|Sales quota|Dunder Mifflin|Paper company|File|Report|Workplace safety|Expense report|Business trip|Client relations|Company policy|Human resources|Submit a proposal|Meet the deadline|Job performance|Close a sale|Office supplies|Sales pitch|Productivity report|Employee evaluation|Quarterly review|Manager meeting|Sales team|Sales numbers|Work email|Conference call|Work-life balance|Overtime|Office hours|Weekly meeting|Promotion|Sales report|Job interview|Submit the paperwork|Company-wide memo|Business strategy|Client presentation|Office party|Budget meeting|New hire|Work project|Revenue target|Annual review|Management decision|Employee training|Company retreat|Work performance)") ~ 1,
+    str_detect(Line, ontask_regular_expression) ~ 1,
     TRUE ~ 0)) |> 
   group_by(Character) |> 
   summarise(prop = sum(on_task)/n())
+head(ontask)
 ```
+
+### Creating a custom color palette (experimental)
+I asked ChatGPT to make a custom color palette for the characters of the office. The colors are supposed to capture the "essence" of the character for plotting.
 
 ```{r}
 palette <- c("Michael" = "#7FB3D5", "Jim" = "#8B8B8B", "Pam" = "#FF8DAA", 
@@ -98,9 +109,11 @@ palette <- c("Michael" = "#7FB3D5", "Jim" = "#8B8B8B", "Pam" = "#FF8DAA",
              "Andy" = "#FF6F61", "Stanley" = "#5C3A1D", "Phyllis" = "#A0522D", 
              "Kelly" = "#FF1493", "Toby" = "#4A90E2", "Kevin" = "#FFA500", 
              "Oscar" = "#1E4D2B", "Creed" = "#C0C0C0", "Meredith" = "#A50000")
+```
 
+##
 
-
+```{r}
 ontask |> 
   ggplot(aes(x = reorder(Character, prop), y = prop, fill = Character)) +
   geom_col(show.legend = FALSE) +
