--- a/projects/amlo_mex/amlo_page.qmd
+++ b/projects/amlo_mex/amlo_page.qmd
@@ -1,25 +1,26 @@
 ---
-title: "Project Under Development"
+title: "How MORENA Came to Control Mexico"
 subtitle: "How AMLO's MORENA Took Over Mexican Politics"
-date: "Sep 17, 2024"
-author: "Kevin Valdivia"
 format: html
 toc: false # Table of contents
 execute: 
   warning: false
   message: false
+  echo: false
 ---
-
-
+# Results of the 2024 Election In Mexico
 ```{r}
 # Libraries used
 library(tidyverse)
 library(ggparliament)
 library(gganimate)
+library(janitor)
+library(readxl)
 ```
 
-
 ```{r}
+# Party order somewhat ordered by political ideology but also on the left is the coalition headed by MORENA and on the further right are more of the institutional parties. In the middle MC is mostly alligned with the insitutal parties but was not in a coalition this election cycle.
+
 party_order <- list(
   "PT",          # Far-left
   "MORENA",      # Left
@@ -32,6 +33,8 @@ party_order <- list(
   "Other_Parties" # Other/Unknown
 )
 
+
+# Party colors asignment
 party_colors <- list(
   PT = "#f02b19",           # Red
   MORENA = "#b5261f",       # Dark Red
@@ -44,7 +47,7 @@ party_colors <- list(
   Other_Parties = "#b2b2b2" # Grey for other/unknown parties
 )
 
-
+# Colors for the coalitions in 2024 election cycle
 coalition_colors <- list(
   PT = "#a41e34",           # Red
   MORENA = "#b5261f",       # Dark Red
@@ -58,78 +61,69 @@ coalition_colors <- list(
 )
 ```
 
-
-
 ```{r}
+# Importing the congressional data
 deputies <- read.csv("deputies_00_24.csv") |> 
   mutate(party = factor(party, levels = party_order)) |> 
   arrange(party) |> 
-  filter(year == 2024) |> 
-  rename(seats = elected) |> 
-  select(-year) |> 
-  mutate(coalition = case_when(party %in% c("MORENA", "PT", "VERDE") ~ "morenacoal",
-                               party %in% c("PRD", "PRI") ~ "fcpmx",
-                               TRUE ~ party))
-```
-
-```{r}
-# Use ggparliament's data structure to prepare the parliament plot
-mex_par_data <- parliament_data(
-  election_data = deputies,
-  type = "semicircle",  # This sets the semicircular layout
-  parl_rows = 10        # Number of rows in the semicircle (adjust this based on number of seats)
-)
-```
-
-
-
-```{r, fig.width=10, fig.height=6}
-# The above fig dimensions were changed to avoid narrowing of the graph
-mex_par_data |> 
-  ggplot(aes(x = x, y = y)) +
-    geom_parliament_seats(size = 6, aes(color = party)) + 
-    scale_colour_manual(values = party_colors) + 
-    theme_void() + 
-    theme(legend.position = "null") +
-    labs(title = "Deptuies Elected in the 2025 Mexican Election by Party") 
-```
-
-
-
-```{r, eval=FALSE}
-deputies <- read.csv("deputies_00_24.csv") %>%
-  mutate(party = factor(party, levels = party_order),
-         year = factor(year)) %>%  # Convert year to a factor
-  arrange(party) %>%
+  rename(seats = elected)
+senate <- read.csv("senate_00_24.csv") |> 
+  mutate(party = factor(party, levels = party_order)) |> 
+  arrange(party) |> 
   rename(seats = elected)
 
-
-# Create a function to prepare data for each year
-prepare_parliament_data <- function(year_data) {
+# Function preparing parliamntary data structure
+prepare_parliament_data <- function(par_data, rows_num) {
   parliament_data(
-    election_data = year_data,
+    election_data = par_data,
     type = "semicircle",  # This sets the semicircular layout
-    parl_rows = 10        # Number of rows in the semicircle
+    parl_rows = rows_num        # Number of rows in the semicircle
   )
 }
 
-# Specify a custom temporary directory
-temp_dir <- tempdir()
+# Taking only the year 2024
+deputies2024 <- deputies |> 
+  filter(year == 2024) |> 
+  prepare_parliament_data(11)
 
-# Create animated parliament plot
-deputies %>%
-  group_by(year) %>%
-  nest() %>%
-  mutate(par_data = map(data, prepare_parliament_data)) %>%
-  unnest(par_data) %>%
-  ggplot(aes(x = x, y = y)) +
-  geom_parliament_seats(size = 6, aes(color = party)) + 
-  scale_colour_manual(values = party_colors) + 
-  theme_void() + 
-  theme(legend.position = "null") +
-  labs(title = "Deputies Elected in the Mexican Election by Party ({frame_time})") +
-  transition_time(year)  # Now will only show specified years
-
-animate(animated_plot, renderer = gifski_renderer(temp_dir))
-
+senate2024 <- senate |> 
+  filter(year == 2024) |> 
+  prepare_parliament_data(6)
 ```
+
+
+::: columns
+::: {.column width="49%"}
+## Camara de Diputados
+```{r, fig.width=10, fig.height=6}
+deputies2024 |> 
+  ggplot(aes(x = x, y = y)) +
+    geom_parliament_seats(size = 7, aes(color = party)) + # party colors
+    # scale_colour_manual(values = party_colors) + # party colors
+    scale_colour_manual(values = coalition_colors) + # coalition colors
+    theme_void() + 
+    theme(legend.position = "null")
+```
+:::
+
+::: {.column width="2%"}
+:::
+
+::: {.column width="49%"}
+## Senado de La Republica
+```{r, fig.width=10, fig.height=6}
+senate2024 |> 
+  ggplot(aes(x = x, y = y)) +
+    geom_parliament_seats(size = 14, aes(color = party)) + # party colors
+    # scale_colour_manual(values = party_colors) + # party colors
+    scale_colour_manual(values = coalition_colors) + # coalition colors
+    theme_void() + 
+    theme(legend.position = "null")
+```
+:::
+:::
+
+
+
+
+
